[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/default.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Results.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -679.0
margin_bottom = -243.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnfocusBg" type="ColorRect" parent="."]
margin_left = -1034.92
margin_top = -886.318
margin_right = 1870.08
margin_bottom = 1074.68
color = Color( 0.443137, 0.443137, 0.443137, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
margin_right = 345.0
margin_bottom = 357.0
color = Color( 0.1349, 0.95, 0.00949999, 1 )

[node name="Title" type="Label" parent="."]
margin_right = 343.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "Results"
align = 1
valign = 1

[node name="CurrentScore" type="Label" parent="."]
margin_left = -1.0
margin_top = 93.0
margin_right = 346.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 2 )
text = "Final Score:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScores" type="Label" parent="."]
margin_left = -1.0
margin_top = 165.0
margin_right = 346.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 4 )
text = "Session High Score:
All-time High Score:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 261.0
margin_right = 331.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 3 )
text = "Play Again!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
